...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_filtre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/labeldate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        layout_constraintEnd_toEndOf="parent"
        layout_constraintHorizontal_bias="0.0"
...
        android:visibility="invisible"
        />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/salle_filtre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/labelsalle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
