...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myrecycleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:context=".Activity.MainActivity"
        tools:listitem="@layout/item_recycleview" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addfloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"

        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/teal_700"
...
